Attempt to disable 300ms delay before click

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ body, button {
 	height: 100%;
 	float: left;
 	background-color: #fff;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
 }
 #buttons-container {
 	width: 16%;
