--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ body, button, input {
 body, button {
 	font-size: 12pt;
 }
+.credits {
+	text-align: center;
+	position: relative;
+	top: 3.5vh;
+}
 #container {
 	position: relative;
 	top: 10vh;
