--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
 	padding: 0;
 	position: absolute;
 	background-color: #eee;
+	width: 100%;
 }
 body, button, input {
 	font-family: /* https://github.com/mrmrs/css-system-fonts */
@@ -14,17 +15,12 @@ body, button, input {
 body, button {
 	font-size: 12pt;
 }
-.credits {
+#credits {
+	padding-top: 3.5vh;
 	text-align: center;
-	position: relative;
-	top: 3.5vh;
 }
 #container {
-	position: relative;
-	top: 10vh;
-	left: 10vw;
-	width: 80vw;
-	height: 80vh;
+	height: 90vh;
 	min-height: 425px;
 	min-width: 650px;
 }
