--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,10 @@ body, button {
 	font-size: 12pt;
 }
 #credits {
-	padding-top: 3.5vh;
 	text-align: center;
 }
 #container {
-	height: 90vh;
+	height: 100vh;
 	min-height: 425px;
 	min-width: 650px;
 }
@@ -37,11 +36,12 @@ body, button {
 	height: 100%;
 	padding: 0 2%;
 	float: right;
+	position: relative; /* Enable the credits to be position:absolute; bottom:0 */
 }
 #buttons-container button {
 	width: 100%;
 	height: 10%;
-	margin: 5% 0;
+	margin: 2.5% 0;
 	padding: 0;
 	border: none;
 	cursor: pointer;
@@ -51,7 +51,7 @@ body, button {
 #btn-hard {   background-color: #f70; }
 #btn-death {  background-color: #f00; }
 #btn-custom { background-color: #00f; color: #fff;}
-#buttons-container > hr {
+#buttons-container hr {
 	border: none;
 	border-top: 1px solid #000;
 }
